# avm

./: .gitignore  .travis.yml  LICENSE.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  test.yml
avm/: __init__.py  avm.py  entry_points.py
tests/: conftest.py  test_avm.py  test_empty.py  test_import.py
tests/files/: ApplicationVersions.xml  Faulty.xml  app_ver_short.xml  app_ver_template.xml
tests/unit/: conftest.py  test_avm.py  test_dummy.py
tests/unit/data/: ApplicationVersions.xml
