[tool.poetry]
name = "avn"
version = "1.0.2"
description = ""
authors = ["Einar Bernt Glomnes, Sevan SSP <ebg@sevassp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nox = "^2021.6.12"
f90nml = "0.21"
xlrd = "1.2.0"
pydantic = "^1.8.2"
desifer = "^0.1.0"
zmq = "^0.0.0"
pymatbridge = "^0.5.2"
sympy = "^1.8"


[tool.poetry.dev-dependencies]
nox = "^2021.6.12"

[[tool.poetry.source]]
name = "private_pypi"
url = "https://api.packagr.app/EYvhW6SyL/"

[tool.poetry.urls]
download = "https://api.packagr.app/EYvhW6SyL/"
issues = "https://github.com/SevanSSP/avn/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
