[tool.poetry]
name = "avm"
version = "1.2.2"
description = "Interact with DNV GL Software's Application Version Manager"
authors = ["Per Voie, Sevan SSP", "Einar B. Glomnes, Sevan SSP <ebg@sevanssp.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SevanSSP/avm/"
packages = [{ include = "avm" },]
include = [
    "LICENSE"
]

[tool.poetry.scripts]
avm-list = "avm.entry_points:list_applications"

[tool.poetry.dependencies]
python = ">=3.9.1, < 4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
nox = "^2024.4.15"
coverage = "^7.6.4"
pytest-cov = "^5.0.0"

[[tool.poetry.source]]
name = "packagr"
url = "https://api.packagr.app/EYvhW6SyL/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.urls]
download = "https://api.packagr.app/EYvhW6SyL/"
issues = "https://github.com/SevanSSP/avm/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
